--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
     </head>
     <body>
         <h1>Tic-Tac-Toe</h1>
-
+        <div id="game-info">Player X's Turn</div>
         <div id="game-container">
-            <div id="0" class="game-cell">×</div>
+            <div id="0" class="game-cell"></div>
             <div id="1" class="game-cell"></div>
             <div id="2" class="game-cell"></div>
-            <div id="3" class="game-cell">○</div>
+            <div id="3" class="game-cell"></div>
             <div id="4" class="game-cell"></div>
             <div id="5" class="game-cell"></div>
-            <div id="6" class="game-cell">○</div>
+            <div id="6" class="game-cell"></div>
             <div id="7" class="game-cell"></div>
             <div id="8" class="game-cell"></div>
         </div>
 
-        <div id="info-container">Test Text</div>
+        
+        <button type="button" id="reset-game">Reset Game</button>
         <script src="script.js" async defer></script>
     </body>
 </html>
